--- a/style.css
+++ b/style.css
@@ -119,6 +119,18 @@
     color: white;
 }
 
+.clearpath {
+    margin-top: 10px;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    background-color: blueviolet;
+    font-size: 20px;
+    font-weight: 700;
+    color: white;
+}
+
 .main-content {
     display: flex;
     justify-content: center;
